force-app/main/default/objects/AH_UDC_Workbook__c/AH_UDC_Workbook__c.object-meta.xml
<CustomObject>
    <description>This object contains details of workbooks and sent workbooks</description>
    <label>UDC Workbook</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC Workbooks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>