force-app/main/default/objects/AH_UDC_Workbook__c/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines if the Workbook is archived</description>
    <inlineHelpText>This determines if the Workbook is archived</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>