force-app/main/default/objects/AH_UDC_Workbook__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
    <fullName>CompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the experience user that completed the UDC Workbook.</description>
    <inlineHelpText>Identifies the experience user that completed the UDC Workbook.</inlineHelpText>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UDCWorkbookCompletedBy</relationshipName>
    <type>Lookup</type>
</CustomField>