force-app/main/default/objects/AH_UDC_Workbook__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <description>The date the sent Workbook was completed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the sent Workbook was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>