force-app/main/default/objects/AH_UDC_Workbook__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the Community User visible description of the Workbook</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Community User visible description of the Workbook</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>