force-app/main/default/objects/AH_UDC_Workbook__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Date the workbook should be completed and submitted</description>
    <formula>RelatedTo__r.AH_UDC_WorkbookDueDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date the workbook should be completed and submitted.  Please go to the Ni Documentation record to change this date.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>