force-app/main/default/objects/AH_UDC_Workbook__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines if the Workbook is available to be sent</description>
    <inlineHelpText>This determines if the Workbook is available to be sent</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>