force-app/main/default/objects/AH_UDC_Workbook__c/fields/InternalUseOnly__c.field-meta.xml
<CustomField>
    <fullName>InternalUseOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this workbook is for internal use only (i.e. testing purposes) and should not be included in any reporting</description>
    <inlineHelpText>Indicates that this workbook is for internal use only (i.e. testing purposes) and should not be included in any reporting</inlineHelpText>
    <label>Internal Use Only</label>
    <type>Checkbox</type>
</CustomField>