force-app/main/default/objects/AH_UDC_Workbook__c/fields/OriginalWorkbook__c.field-meta.xml
<CustomField>
    <fullName>OriginalWorkbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Original Workbook from which the Workbook was sent.</description>
    <inlineHelpText>This is the Original Workbook from which the Workbook was sent.</inlineHelpText>
    <label>Original Workbook</label>
    <referenceTo>AH_UDC_Workbook__c</referenceTo>
    <relationshipLabel>UDC Workbooks</relationshipLabel>
    <relationshipName>Workbooks</relationshipName>
    <type>Lookup</type>
</CustomField>