force-app/main/default/objects/AH_UDC_Workbook__c/fields/ParentWorkbookSent__c.field-meta.xml
<CustomField>
    <fullName>ParentWorkbookSent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Parent that can be used to retrieve values of picklists.</description>
    <inlineHelpText>This is the Parent that can be used to retrieve values of picklists.</inlineHelpText>
    <label>Parent</label>
    <referenceTo>AH_UDC_Workbook__c</referenceTo>
    <relationshipLabel>UDC Workbooks (Parent Workbook Sent)</relationshipLabel>
    <relationshipName>ParentWorkbook</relationshipName>
    <type>Lookup</type>
</CustomField>