force-app/main/default/objects/AH_UDC_Workbook__c/fields/PercentageComplete__c.field-meta.xml
<CustomField>
    <fullName>PercentageComplete__c</fullName>
    <description>Calculates the % of the Workbook Steps Completed</description>
    <formula>NumberOfStepsCompleted__c  /  TotalNumberOfSteps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the % of the Workbook Steps Completed</inlineHelpText>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>