force-app/main/default/objects/AH_UDC_Workbook__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Denotes which product for which the Workbook is used</description>
    <inlineHelpText>Denotes which product for which the Workbook is used</inlineHelpText>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACRS</fullName>
                <color>#0B6FCE</color>
                <label>ACRS</label>
            </value>
            <value>
                <fullName>All Products</fullName>
                <color>#DDDDDD</color>
                <label>All Products</label>
            </value>
            <value>
                <fullName>APMA</fullName>
                <color>#A845DC</color>
                <label>APMA</label>
            </value>
            <value>
                <fullName>APMS</fullName>
                <color>#F3D904</color>
                <label>APMS</label>
            </value>
            <value>
                <fullName>ASEM Standard</fullName>
                <isActive>false</isActive>
                <label>ASEM Standard</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <color>#419249</color>
                <label>BI</label>
            </value>
            <value>
                <fullName>BI - Agency360</fullName>
                <color>#B6E32E</color>
                <label>BI - Agency360</label>
            </value>
            <value>
                <fullName>BI - Demand360</fullName>
                <color>#641CCF</color>
                <label>BI - Demand360</label>
            </value>
            <value>
                <fullName>BI - RevenueStrategy360</fullName>
                <color>#F96FB7</color>
                <label>BI - RevenueStrategy360</label>
            </value>
            <value>
                <fullName>Central Sales</fullName>
                <color>#2F5D85</color>
                <label>Central Sales</label>
            </value>
            <value>
                <fullName>Consortia</fullName>
                <color>#AFCADF</color>
                <label>Consortia</label>
            </value>
            <value>
                <fullName>Delphi</fullName>
                <color>#A53711</color>
                <label>Delphi</label>
            </value>
            <value>
                <fullName>Delphi Diagramming</fullName>
                <color>#78C953</color>
                <label>Delphi Diagramming</label>
            </value>
            <value>
                <fullName>Delphi Select</fullName>
                <color>#66E9BD</color>
                <label>Delphi Select</label>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <color>#EFAE73</color>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>DirectBook</fullName>
                <color>#57F17C</color>
                <label>DirectBook</label>
            </value>
            <value>
                <fullName>GDS Media</fullName>
                <color>#0B6FCE</color>
                <label>GDS Media</label>
            </value>
            <value>
                <fullName>GMS</fullName>
                <color>#78C953</color>
                <label>GMS</label>
            </value>
            <value>
                <fullName>iHotelier</fullName>
                <color>#E27001</color>
                <label>iHotelier</label>
            </value>
            <value>
                <fullName>Integrations</fullName>
                <color>#A845DC</color>
                <label>Integrations</label>
            </value>
            <value>
                <fullName>IoT</fullName>
                <color>#FF6600</color>
                <label>IoT</label>
            </value>
            <value>
                <fullName>LinkHotel</fullName>
                <color>#F3D904</color>
                <label>LinkHotel</label>
            </value>
            <value>
                <fullName>MeetingBroker</fullName>
                <color>#A53711</color>
                <label>MeetingBroker</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#66E9BD</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>RezExchange</fullName>
                <color>#0B24BE</color>
                <label>RezExchange</label>
            </value>
            <value>
                <fullName>RFP Toolkit</fullName>
                <color>#419249</color>
                <label>RFP Toolkit</label>
            </value>
            <value>
                <fullName>SEO Digital Marketing</fullName>
                <color>#8F6429</color>
                <label>SEO Digital Marketing</label>
            </value>
            <value>
                <fullName>SO</fullName>
                <color>#B6E32E</color>
                <label>SO</label>
            </value>
            <value>
                <fullName>Travel Audience</fullName>
                <color>#641CCF</color>
                <label>Travel Audience</label>
            </value>
            <value>
                <fullName>Web</fullName>
                <color>#F96FB7</color>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>