force-app/main/default/objects/AH_UDC_Workbook__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the NI Documentation record to which the sent Workbook was attached</description>
    <inlineHelpText>This is the NI Documentation record to which the sent Workbook was attached</inlineHelpText>
    <label>Related To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only &apos;Unified Data Collection - Workbook&apos; record type is accepted.</errorMessage>
        <filterItems>
            <field>NI_Documentation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Unified Data Collection - Workbook</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>UDC Workbook Sent</relationshipLabel>
    <relationshipName>Workbooks</relationshipName>
    <type>Lookup</type>
</CustomField>