force-app/main/default/objects/AH_UDC_Workbook__c/fields/RelatedToDocName__c.field-meta.xml
<CustomField>
    <fullName>RelatedToDocName__c</fullName>
    <description>Document Name</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; RelatedTo__c, RelatedTo__r.Document_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Document Name</inlineHelpText>
    <label>Related To Document Name</label>
    <type>Text</type>
</CustomField>