force-app/main/default/objects/AH_UDC_Workbook__c/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When unchecked, the Workbook Sent was created however the Contacts were not created as Community Users and were not sent Welcome emails.  Use the &quot;Release&quot; button to create community users and send emails.</description>
    <inlineHelpText>When unchecked, the Workbook Sent was created however the Contacts were not created as Community Users and were not sent Welcome emails.  Use the &quot;Release&quot; button to create community users and send emails.</inlineHelpText>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>