force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder1Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder1Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>The number of days before (positive) or after (negative) that the reminder will be sent.</description>
    <inlineHelpText>The number of days before (positive) or after (negative) that the reminder will be sent.</inlineHelpText>
    <label>Reminder 1 : Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>