force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder1Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reminder1Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is the first reminder to the customer.</description>
    <inlineHelpText>This is the first reminder to the customer.</inlineHelpText>
    <label>Reminder 1 : Enabled</label>
    <type>Checkbox</type>
</CustomField>