force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder2EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Reminder2EmailTemplate__c</fullName>
    <defaultValue>&apos;AH_UDC_Workbook_Sent_Due_Date_Notification&apos;</defaultValue>
    <description>The email template to use when sending the reminder.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email template to use when sending the reminder.</inlineHelpText>
    <label>Reminder 2 : Email Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>