force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder2Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reminder2Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is the second reminder to the customer.</description>
    <inlineHelpText>This is the second reminder to the customer.</inlineHelpText>
    <label>Reminder 2 : Enabled</label>
    <type>Checkbox</type>
</CustomField>