force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder3Enabled__c.field-meta.xml
<CustomField>
    <fullName>Reminder3Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is the third reminder to the customer.</description>
    <inlineHelpText>This is the third reminder to the customer.</inlineHelpText>
    <label>Reminder 3 : Enabled</label>
    <type>Checkbox</type>
</CustomField>