force-app/main/default/objects/AH_UDC_Workbook__c/fields/Reminder3Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder3Sent__c</fullName>
    <description>The date/time when the reminder was sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time when the reminder was sent.</inlineHelpText>
    <label>Reminder 3 : Sent</label>
    <type>DateTime</type>
</CustomField>