force-app/main/default/objects/AH_UDC_Workbook__c/fields/SecurityCode__c.field-meta.xml
<CustomField>
    <fullName>SecurityCode__c</fullName>
    <description>This is the security code specific and unique to this Workbook Sent. This will allow the form to retrieve data from Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>This is the security code specific and unique to this Workbook Sent. This will allow the form to retrieve data from Salesforce.</inlineHelpText>
    <label>Security Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>