force-app/main/default/objects/AH_UDC_Workbook__c/fields/SentDate__c.field-meta.xml
<CustomField>
    <fullName>SentDate__c</fullName>
    <description>The date the Workbook was sent</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Workbook was sent</inlineHelpText>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>