force-app/main/default/objects/AH_UDC_Workbook__c/fields/SentStatus__c.field-meta.xml
<CustomField>
    <fullName>SentStatus__c</fullName>
    <description>Displays the status of the Worksheet Sent</description>
    <inlineHelpText>Displays the status of the Worksheet Sent</inlineHelpText>
    <label>Sent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed/Locked</fullName>
            </value>
            <value>
                <fullName>Failed To Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>