force-app/main/default/objects/AH_UDC_Workbook__c/fields/StepsinOrder__c.field-meta.xml
<CustomField>
    <fullName>StepsinOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the steps need to be completed in the order defined.</description>
    <inlineHelpText>Check this box if the steps need to be completed in the order defined.</inlineHelpText>
    <label>Steps in Order</label>
    <type>Checkbox</type>
</CustomField>