force-app/main/default/objects/AH_UDC_Workbook__c/fields/TimeToComplete__c.field-meta.xml
<CustomField>
    <fullName>TimeToComplete__c</fullName>
    <description>Calculates the number of days elapsed between Sent Date and Completed Date</description>
    <formula>CompletedDate__c -  SentDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of days elapsed between Sent Date and Completed Date</inlineHelpText>
    <label>Time to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>