force-app/main/default/objects/AH_UDC_Workbook__c/fields/TotalNumberOfSteps__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberOfSteps__c</fullName>
    <description>Rollup Summary of total number of steps associated with the workbook</description>
    <inlineHelpText>Rollup Summary of total number of steps associated with the workbook</inlineHelpText>
    <label>Total Number of Steps</label>
    <summaryFilterItems>
        <field>AH_UDC_WorkbookStep__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Workbook Step Sent</value>
    </summaryFilterItems>
    <summaryForeignKey>AH_UDC_WorkbookStep__c.Workbook__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>