force-app/main/default/objects/AH_UDC_Workbook__c/fields/Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn__c</fullName>
    <description>When checked this workbook will no longer be visible to the Community User.</description>
    <formula>RelatedTo__r.AH_UDC_WorkbookWithdrawn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When checked this workbook will no longer be visible to the Community User.</inlineHelpText>
    <label>Withdrawn</label>
    <type>Checkbox</type>
</CustomField>