force-app/main/default/objects/AH_UDC_Workbook__c/recordTypes/AH_UDC_Workbook.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_Workbook</fullName>
    <active>true</active>
    <description>Record type for creating Workbooks</description>
    <label>Workbook</label>
</RecordType>