force-app/main/default/objects/AH_UDC_Workbook__c/recordTypes/AH_UDC_WorkbookSent.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_WorkbookSent</fullName>
    <active>true</active>
    <description>Record type used to capture Workbooks that have been sent</description>
    <label>Workbook Sent</label>
</RecordType>