force-app/main/default/objects/AH_UDC_Workbook__c/listViews/AH_UDC_AllWorkbooks.listView-meta.xml
<ListView>
    <fullName>AH_UDC_AllWorkbooks</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Enabled__c</columns>
    <columns>Product__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PercentageComplete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Workbook__c.AH_UDC_Workbook</value>
    </filters>
    <label>All Workbooks</label>
</ListView>