force-app/main/default/objects/AH_UDC_Workbook__c/listViews/AH_UDC_AllWorkbooksSent.listView-meta.xml
<ListView>
    <fullName>AH_UDC_AllWorkbooksSent</fullName>
    <columns>NAME</columns>
    <columns>RelatedToDocName__c</columns>
    <columns>Product__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SentDate__c</columns>
    <columns>SentStatus__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>WorkbookSentDueDate__c</columns>
    <columns>PercentageComplete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Workbook__c.AH_UDC_WorkbookSent</value>
    </filters>
    <label>All Workbooks Sent</label>
    <language>en_US</language>
</ListView>