force-app/main/default/objects/AH_UDC_Workbook__c/listViews/AH_UDC_MyWorkbooks.listView-meta.xml
<ListView>
    <fullName>AH_UDC_MyWorkbooks</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Enabled__c</columns>
    <columns>Product__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Workbook__c.AH_UDC_Workbook</value>
    </filters>
    <label>My Workbooks</label>
</ListView>