force-app/main/default/objects/AH_UDC_Workbook__c/listViews/AH_UDC_MyWorkbooksSent.listView-meta.xml
<ListView>
    <fullName>AH_UDC_MyWorkbooksSent</fullName>
    <columns>RelatedToDocName__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SentDate__c</columns>
    <columns>SentStatus__c</columns>
    <columns>CompletedDate__c</columns>
    <columns>WorkbookSentDueDate__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Workbook__c.AH_UDC_WorkbookSent</value>
    </filters>
    <label>My Workbooks Sent</label>
</ListView>