force-app/main/default/objects/AH_UDC_Workbook__c/listViews/Workbook_Sent_Internal_Use_Only.listView-meta.xml
<ListView>
    <fullName>Workbook_Sent_Internal_Use_Only</fullName>
    <columns>NAME</columns>
    <columns>SentStatus__c</columns>
    <columns>RelatedToDocName__c</columns>
    <columns>InternalUseOnly__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AH_UDC_Workbook__c.AH_UDC_WorkbookSent</value>
    </filters>
    <filters>
        <field>InternalUseOnly__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Workbook Sent Internal Use Only</label>
    <language>en_US</language>
</ListView>